--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,68 +1,160 @@
+/**** CUSTOM PROPERTIES ****/
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* Colors */
+  --primary: #121212;
+  --secondary: #fafafa;
+  --accent: #e1f264;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+@font-face {
+  font-family: Nacelle-Black;
+  src: url('../fonts/Nacelle-Black.otf') format('opentype');
 }
-a:hover {
-  color: #535bf2;
+
+@font-face {
+  font-family: Nacelle-Bold;
+  src: url('../fonts/Nacelle-Bold.otf') format('opentype');
 }
+
+/**** BASE STYLES ****/
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background: var(--primary);
+  color: var(--secondary);
+  font-family: 'Work Sans', sans-serif;
+  overflow-x: hidden;
+  font-size: 12px;
 }
 
+/* Mobile Styles */
+
 h1 {
-  font-size: 3.2em;
+  font-family: Nacelle-Black, sans-serif;
+  font-size: 2.5rem;
+}
+
+h2 {
+  font-family: Nacelle-Bold, sans-serif;
+  font-size: 1.75rem;
+}
+
+h3 {
+  font-family: 'Work Sans', sans-serif;
+  font-size: 1rem;
+}
+
+p {
+  font-size: 12px;
+}
+
+/* Tablet Styles */
+@media screen and (min-width: 620px) {
+  body {
+    font-size: 20px;
+  }
+}
+
+/* Small Desktop Styles */
+@media screen and (min-width: 960px) {
+  body {
+    font-size: 24px;
+  }
+}
+
+/* Large Desktop Styles */
+@media screen and (min-width: 1200px) {
+  body {
+    font-size: 40px;
+  }
+}
+
+/**** CSS RESET ****/
+/* https://piccalil.li/blog/a-more-modern-css-reset */
+
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Prevent font size inflation */
+html {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
+/* Remove default margin and padding */
+* {
+  margin: 0;
+  padding: 0;
+  font: inherit;
+}
+
+/* Remove list styles on ul, ol elements */
+ul,
+ol {
+  list-style: none;
+}
+
+/* Height reset */
+html,
+body {
+  height: 100%;
+}
+
+/* Set default line height */
+body {
+  line-height: 1.5;
+}
+
+/* Set shorter line heights on headings and interactive elements */
+h1,
+h2,
+h3,
+h4,
+button,
+input,
+label {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+/* Balance text wrapping on headings */
+h1,
+h2,
+h3,
+h4 {
+  text-wrap: balance;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+  color: currentColor;
+}
+
+/* Make images easier to work with */
+img,
+picture,
+svg {
+  max-width: 100%;
+  display: block;
+}
+
+/* Make sure textareas without a rows attribute are not tiny */
+textarea:not([rows]) {
+  min-height: 10em;
+}
+
+/* Anything that has been anchored to should have extra scroll margin */
+:target {
+  scroll-margin-block: 5ex;
+}
+
+/* Remove text decoration from anchors */
+a {
+  text-decoration: none;
 }
