--- a/client/src/layout/Navbar.module.css
+++ b/client/src/layout/Navbar.module.css
@@ -19,6 +19,10 @@
   text-stroke: 2px var(--accent);
 }
 
+.logo_tech {
+  color: var(--secondary);
+}
+
 .nav_action {
   display: flex;
   gap: 50px;
@@ -46,6 +50,7 @@
 
 .nav_link {
   padding: 0.5rem;
+  color: var(--secondary);
 }
 
 .joinus {
