--- a/client/src/layout/Navbar.module.css
+++ b/client/src/layout/Navbar.module.css
@@ -51,71 +51,27 @@
 .nav_link {
   padding: 0.5rem;
   color: var(--secondary);
+  transition: transform 0.2s ease;
 }
 
 .joinus {
-  padding: 0.8rem 1rem;
+  margin: 10px 0;
+  padding: 8px 10px;
   border-radius: 50px;
   color: var(--primary);
   background-color: var(--accent);
+  font-size: 12px;
+  border: none;
+  transition: transform 0.3s ease;
 }
 
-/* Tablet Styles */
-@media screen and (min-width: 620px) and (max-width: 960px) {
+.joinus:active {
+  transform: scale(0.95);
+  transform-origin: center;
 }
 
-/* Small Desktop Styles */
-@media screen and (min-width: 960px) and (max-width: 1200px) {
-  .navbar {
-    justify-content: space-between;
-    padding: 50px 85px;
-  }
-  .nav_links {
-    position: relative;
-    top: 0;
-    width: unset;
-    height: unset;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 50px;
-    font-size: 20px;
-  }
-  .menu_icon {
-    display: none;
-  }
-  .joinus {
-    padding: 10px 13px;
-    font-size: 20px;
-  }
-}
-
-/* Large Desktop Styles */
-@media screen and (min-width: 1200px) {
-  .navbar {
-    justify-content: space-between;
-    padding: 50px 85px;
-  }
-  .nav_links {
-    position: relative;
-    top: 0;
-    width: unset;
-    height: unset;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 50px;
-    font-size: 20px;
-  }
-  .menu_icon {
-    display: none;
-  }
-  .joinus {
-    padding: 10px 13px;
-    font-size: 24px;
-  }
+.logo {
+  font-size: 28px;
 }
 
 .input_checkbox {
@@ -124,20 +80,20 @@
 
 .toggle {
   position: relative;
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   cursor: pointer;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 7.5px;
+  gap: 5px;
   transition-duration: 0.5s;
 }
 
 .bars {
   width: 100%;
-  height: 4px;
+  height: 2px;
   background-color: var(--secondary);
   border-radius: 4px;
 }
@@ -176,4 +132,98 @@
 .input_checkbox:checked + .toggle {
   transition-duration: 0.5s;
   transform: rotate(180deg);
+}
+
+/* Tablet Styles */
+@media screen and (min-width: 620px) and (max-width: 960px) {
+  .joinus {
+    padding: 10px 12px;
+    font-size: 16px;
+  }
+
+  .logo {
+    font-size: 35px;
+  }
+
+  .toggle {
+    height: 30px;
+    width: 30px;
+    gap: 7.5px;
+  }
+
+  .bars {
+    height: 4px;
+  }
+}
+
+/* Small Desktop Styles */
+@media screen and (min-width: 960px) and (max-width: 1200px) {
+  .joinus {
+    padding: 0px 10px;
+    font-size: 20px;
+  }
+  .logo {
+    font-size: 35px;
+  }
+
+  .navbar {
+    justify-content: space-between;
+    padding: 40px;
+  }
+}
+
+/* Large Desktop Styles */
+@media screen and (min-width: 1200px) {
+  .joinus {
+    padding: 0px 13px;
+    font-size: 20px;
+  }
+  .logo {
+    font-size: 42px;
+  }
+
+  .navbar {
+    justify-content: space-between;
+    padding: 50px;
+  }
+}
+
+/* both large and small desktops */
+@media screen and (min-width: 960px) {
+  .nav_links {
+    position: relative;
+    top: 0;
+    width: unset;
+    height: unset;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 50px;
+    font-size: 20px;
+  }
+
+  .menu_icon {
+    display: none;
+  }
+
+  .nav_link:hover {
+    text-shadow: 0 0 10px var(--secondary);
+  }
+
+  .nav_link:active {
+    transform: scale(0.8);
+    transform-origin: center;
+  }
+
+  .joinus:hover {
+    /* box-shadow: 0 0 15px var(--accent); */
+    transform: scale(1.1);
+    transform-origin: center;
+  }
+
+  .joinus:active {
+    transform: scale(0.95);
+    transform-origin: center;
+  }
 }
